Add request of cancellation for application for leave dashboard